--- a/www/styles/css-common.css
+++ b/www/styles/css-common.css
@@ -5,10 +5,7 @@
 @font-face{	font-family: 'Source Sans Pro Extra Light';         src: url('../fonts/SourceSansPro-ExtraLight.otf')  format('truetype');	}
 @font-face{ font-family: 'Courrier New';                        src: url('../fonts/cour.ttf')                      format('truetype');	}
 @font-face{ font-family: 'ethnocentric';                        src: url('../fonts/ethnocentric rg.ttf')           format('truetype');	}
-@font-face{ font-family: 'Monofur';                              src: url('../fonts/monof55.ttf')                  format('truetype');	}
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 
 /* Codes couleurs  
@@ -18,41 +15,38 @@
 
 
 // boutons //
-    boutons bleu : #0275d8;
-    boutons bleu (hover) : #0468c0
+    boutons bleu :              #0275d8
+    boutons bleu (hover) :      #0468c0
 
-    boutons vert : #5cb85c 
-    boutons vert (hover) : #3e8e41 
+    boutons vert :              #4CAF50 
+    boutons vert (hover) :      #3e8e41 
 
-    boutons rouge : #d9534f;
-    boutons rouge (hover) : #b14440;
+    boutons rouge :             #d9534f
+    boutons rouge (hover) :     #b14440
 
-    boutons gris : #555555;
+    boutons gris :              #555555
     boutons gris (hover) : 
 
-    boutons blanc : #f7f7f7
+    boutons blanc :             #f7f7f7
     boutons blanc (hover) :
 
 
 // sections //
     couleur de fond gris : background-color: #2b2b2b;
     couleur de fond gris +foncé : background-color: #252525;
-
 */
-
 
 
 body {
     /* Gestion de l'affichage 'fade-in' de chaque page, afin de rendre l'affichage des pages plus agréable 
     Voir @keyframes fadeInAnimation en complément ci-dessous */
-    animation: fadeInAnimation ease 0.01s;
+    animation: fadeInAnimation ease 0.00001s;
     animation-iteration-count: 1; 
     animation-fill-mode: forwards;
-
     min-height: 100%;
-    font-family: Source Sans Pro Regular;
-    margin: 0;
-    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0px;
+    padding: 0px;
     background-color: #333333;
     color: whitesmoke; /* couleur par défaut */
 }
@@ -67,11 +61,16 @@ body {
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
+    /* utilisation de text-shadow pour gérer le bold sur un lien survolé, sans que ça provoque de décalage */
+    text-shadow: -.25px -.25px 0 transparent, 
+                  .25px .25px transparent;
 }
 
 a:hover {
-    font-weight: bold;
+    /* utilisation de text-shadow pour gérer le bold sur un lien survolé, sans que ça provoque de décalage */
+    text-shadow: -.25px -.25px 0 white, 
+                  .25px .25px white;
 }
 
 p, label, a {
@@ -79,24 +78,27 @@ p, label, a {
     color: whitesmoke;
 }
 
-h1, h2, h3, h4, h5
-{
+h1, h2, h3, h4, h5 {
 	color: whitesmoke;
 }
 
-header
-{
+header {
     width: 100%;
     margin-bottom: 70px;
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-header h1
-{
+header #title {
     font-family: 'ethnocentric';
     margin-left: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     display: inline-block;
     color: whitesmoke;
 }
@@ -110,14 +112,68 @@ hr {
     opacity: 0.11;
 }
 
+/* Classes génériques */
+.is-inline {
+    display: inline;
+}
+
+.is-block {
+    display: block;
+}
+
+.is-inline-block {
+    display: inline-block;
+}
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+.align-top {
+    vertical-align: top;
+}
+
 /* Quelques classes génériques permettant de créer des textes de couleurs */
 .greentext {
-    color: #5cb85c;
+    color: #4CAF50;
 }
 
 .redtext {
     color: #d9534f;
 }
+
+/* Classes génériques permettant de créer des div ou autres block avec un fond défini et des bords arrondis */
+.background-gray, .background-green, .background-blue {
+    border-radius: 5px;
+    box-shadow:
+     0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
+     0px 2px 2px 0px rgba(255, 255, 255, 0.2);
+     background-color: #252525;
+     padding: 2px;
+}
+
+.background-green {
+     background-color: #4CAF50;
+}
+
+.background-blue {
+     background-color: #0275d8;
+}
+
+.background-green:hover {
+    background-color: #3e8e41;
+    transition-duration: 0.4s;
+}
+
+.background-blue:hover {
+    background-color: #0468c0;
+    transition-duration: 0.4s;
+}
+
 
 /* Affichage de version alpha/beta sous le titre du produit */
 #version {
@@ -139,7 +195,7 @@ hr {
 #menu {
     margin: auto;
     display: block;
-    padding: 0; /* force padding à 0, sinon le navigateur ajoute un padding par défaut de 40px à gauche */
+    padding: 0px; /* force padding à 0, sinon le navigateur ajoute un padding par défaut de 40px à gauche */
 }
 
 #menu li {
@@ -159,27 +215,41 @@ section.main {
 
 .div-half-left {
     width: 48%;
-    min-height: 250;
-    margin-bottom: 10;
-    padding: 10;
+    min-height: 250px;
+    margin-bottom: 10px;
+    padding: 10px;
     display: inline-block;
     vertical-align: top;
 }
 
 .div-half-right {
     width: 48%;
-    min-height: 250;
-    margin-bottom: 10;
-    padding: 10;
+    min-height: 250px;
+    margin-bottom: 10px;
+    padding: 10px;
     display: inline-block;
     vertical-align: top;
 }
 
+.div-28 { width: 28%; padding: 10px; }
+.div-29 { width: 29%; padding: 10px; }
+.div-30 { width: 30%; padding: 10px; }
+.div-33 { width: 33%; padding: 10px; }
+.div-45 { width: 45%; padding: 10px; }
+.div-48 { width: 48%; padding: 10px; }
+.div-49 { width: 49%; padding: 10px; }
+.div-50 { width: 50%; padding: 10px; }
+.div-65 { width: 65%; padding: 10px; }
+.div-67 { width: 67%; padding: 10px; }
+.div-68 { width: 68%; padding: 10px; }
+.div-69 { width: 69%; padding: 10px; }
+.div-70 { width: 70%; padding: 10px; }
+
 section.center {
     width: 99%;
     margin: auto;
-    margin-bottom: 10;
-    padding: 10;
+    margin-bottom: 10px;
+    padding: 10px;
     display: inline-block;
     border-radius: 5px;
     box-shadow:
@@ -192,23 +262,23 @@ section.center {
 /* Sections conteneurs permettant de séparer les pages en deux */
 section.mainSectionLeft {
     width: 68%;
-    padding-left: 10;
+    padding-left: 10px;
     display: inline-block;
     vertical-align: top; /* force toutes les sous-sections à commencer en haut de la section principale */
 }
 
 section.mainSectionRight {
     width: 30%;
-    padding-right: 10;
+    padding-right: 10px;
     display: inline-block;
     vertical-align: top; /* force toutes les sous-sections à commencer en haut de la section principale */
 }
 
 section.left {
     width: 98%; /* cette section prend toute la largeur ou presque (penser qu'il y a un padding de 10) de sa section conteneur 'mainSectionLeft' */
-    min-height: 250;
-    margin-bottom: 10;
-    padding: 10;
+    min-height: 250px;
+    margin-bottom: 10px;
+    padding: 10px;
     display: inline-block;
     vertical-align:top;
     border-radius: 5px;
@@ -222,8 +292,8 @@ section.left {
 /* paramètres pour les sections sur la droite, et pour les sections masqués */
 section.right, #newRepoSlideDiv {
     width: 97%; /* cette section prend toute la largeur ou presque (penser qu'il y a un padding de 10) de sa section conteneur 'mainSectionRight' */
-    margin-bottom: 10;
-    padding: 10;
+    margin-bottom: 10px;
+    padding: 10px;
     vertical-align:top;
     border-radius: 5px;
     float: right;
@@ -235,14 +305,14 @@ section.right, #newRepoSlideDiv {
 
 /* on écrase certaines des valeurs ci-dessus afin que la section soit masquée au chargement de la page */
 #newRepoSlideDiv {
-    width: 0; /* longueur de 0 par défaut, pour que cette section soit complètement masqué. */
+    width: 0px; /* longueur de 0 par défaut, pour que cette section soit complètement masqué. */
     padding: 0px; /* padding forcé à 0 par défaut, pour que cette section soit complètement masqué. C'est le script Jquery qui remets le padding à 10 une fois la section affichée */
     overflow: hidden; /* cacher ce qui dépasse, pour que cette section soit complètement masqué par défaut */
 }
 
 #serverInfoSlideDiv {
     width: 97%; /* cette section prend toute la largeur ou presque (penser qu'il y a un padding de 10) de sa section conteneur 'mainSectionRight' */
-    margin-bottom: 10;
+    margin-bottom: 10px;
     vertical-align:top;
     float: right;
     overflow: hidden; /* cacher ce qui dépasse, pour que cette section soit complètement masqué lorsqu'on choisi de le masquer */
@@ -258,11 +328,11 @@ section.right input {
 }
 
 section.right input[type=radio] {
-    width: 20;
+    width: 20px;
 }
 
 form.actionform {
-    padding: 5;
+    padding: 5px;
     border-radius: 2px;
     box-shadow:
      0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
@@ -287,12 +357,6 @@ table {
     width: 65%;
 }
 
-.table-medium-right {
-    width: 50%;
-    display: inline-block;
-    float: right;
-}
-
 table.actiontable { /* réservé aux tableaux d'actions (opérations) sur la page d'index */
     width: 100%;
 }
@@ -303,7 +367,6 @@ table thead, .reposListHead {
 
 table.list-repos {
     width: 100%;
-    /*font-family: 'Ubuntu Mono', monospace;*/
     font-size: 13px;
 }
 
@@ -314,8 +377,8 @@ table.list-repos td {
 
 table.list-repos td.td-xsmall {
     max-width: 8px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .list-repos tr.color1 td { 
@@ -345,7 +408,7 @@ table.list-repos td.td-redbackground span {
 }
 
 table.list-repos td.td-greenbackground span {
-    background-color:#5cb85c;
+    background-color:#4CAF50;
     color: whitesmoke;
 }
 
@@ -374,24 +437,8 @@ table.list-repos td.td-bluebackground span:hover {
     background-color: #0468c0;
 }
 
-.hide, .tr-hide {
+.hide, .tr-hide, .td-hide {
     display: none;
-}
-
-.divGroupsList, .divManageReposSources {
-    width: 100%;
-    display: none;
-    min-height: 300px;
-    max-height: 400px;
-    position: fixed;
-    bottom: 0;
-    padding: 10;
-    border-radius: 2px;
-    box-shadow:
-     0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
-     0px 2px 2px 0px rgba(109, 109, 109, 0.2);
-     background-color:#333333;
-    overflow: scroll; /* si le contenu dépasse la limite (max-height), une scrollbar sera mise en place */
 }
 
 table.configuration-table {
@@ -420,27 +467,20 @@ td {
 }
 
 .td-medium {
-    width: 500px;
+    width: 300px;
 }
 
+.td-large {
+    width: 500px;
+}
 
 #log {
     font-size: 13px;
     padding: 10px;
 }
 
-section.log {
-    width: 100%;
-    border-radius: 2px;
-    box-shadow:
-     0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
-     0px 2px 2px 0px rgba(109, 109, 109, 0.2);
-     background-color:#3b3b3b;
-     color: whitesmoke;
-}
-
 /* conf commune à toutes les icones */
-.icon, .icon-lowopacity, .icon-lowopacity-red, .icon-lowopacity-blue, .icon-lowopacity-green, .icon-verylowopacity, .icon-verylowopacity-red, .icon-verylowopacity-blue, .icon-verylowopacity-green, .icon-invisible {
+.icon, .icon-lowopacity, .icon-lowopacity-red, .icon-lowopacity-blue, .icon-lowopacity-green, .icon-verylowopacity, .icon-verylowopacity-red, .icon-verylowopacity-blue, .icon-verylowopacity-green, .icon-invisible, .icon-mediumopacity {
     height: 11px;
     margin-left: 5px;
     margin-right: 5px;
@@ -452,11 +492,10 @@ section.log {
 }
 
 .icon-verylowopacity, .icon-verylowopacity-red, .icon-verylowopacity-blue, .icon-verylowopacity-green { /* pour une icone encore plus transparente */
-    /*opacity: 0.11;*/
     opacity: 0.06;
 }
 
-.icon-lowopacity:hover, .icon-verylowopacity:hover, .icon-invisible:hover {
+.icon-lowopacity:hover, .icon-verylowopacity:hover, .icon-invisible:hover, .icon-mediumopacity:hover {
     opacity: 1;
 }
 
@@ -482,6 +521,11 @@ section.log {
     opacity: 0;
 }
 
+.icon-mediumopacity {
+    opacity: 0.55;
+}
+
+
 .li-operation-running {
     background-color: #d9534f;
     border: none;
@@ -500,7 +544,7 @@ section.log {
 }
 
 .li-operation-not-running {
-    background-color: #5cb85c;
+    background-color: #4CAF50;
     border: none;
     border-radius: 2px;
     color: whitesmoke;
@@ -537,10 +581,11 @@ section.log {
     background-color: #2e2e2e;
 }
 
-.divReposSources, .divReposListDisplay {
+.divManageReposSources, .divGroupsList, .divReposListDisplay {
     color: whitesmoke;
     padding: 5px;
-    border-radius: 2px;
+    margin-bottom: 20px;
+    border-radius: 4px;
     box-shadow:
      0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
      0px 2px 2px 0px rgba(255, 255, 255, 0.2);
@@ -548,12 +593,7 @@ section.log {
 }
 
 .divReposSources textarea {
-    min-height: 300px;
-}
-
-.divReposListDisplay {
-    font-size: 10px;
-    margin-bottom: 20px;
+    min-height: 200px;
 }
 
 
@@ -570,36 +610,20 @@ input[type=text], input[type=date], input[type=time], input[type=number], select
     background-color:#474747;
 }
 
-select.select-small {
+input[type=text].input-small, .select-small {
     width: 100px;
 }
 
-select.select-medium {
+input[type=text].input-medium, .select-medium {
     width: 150px;
 }
 
-select.select-large {
+input[type=text].input-large, .select-large {
     width: 250px;
 }
 
-select.select-xlarge {
-    width: 300px;
-}
-
-select.select-xxlarge {
+.select-xxlarge {
     width: 400px;
-}
-
-input[type=text].input-small {
-    width: 100px;
-}
-
-input[type=text].input-medium {
-    width: 150px;
-}
-
-input[type=text].input-large {
-    width: 250px;
 }
 
 .button-operations-large {
@@ -676,7 +700,7 @@ input[type=text].input-large {
 }
 
 .button-submit-large-green {
-    background-color: #5cb85c;
+    background-color: #4CAF50;
     border: none;
     border-radius: 2px;
     color: whitesmoke;
@@ -695,7 +719,7 @@ input[type=text].input-large {
 }
 
 .button-submit-medium-green {
-    background-color: #5cb85c;
+    background-color: #4CAF50;
     border: none;
     border-radius: 2px;
     color: whitesmoke;
@@ -714,7 +738,7 @@ input[type=text].input-large {
 }
 
 .button-submit-small-green {
-    background-color: #5cb85c;
+    background-color: #4CAF50;
     border: none;
     border-radius: 2px;
     color: whitesmoke;
@@ -733,7 +757,7 @@ input[type=text].input-large {
 }
 
 .button-submit-xsmall-green {
-    background-color: #5cb85c;
+    background-color: #4CAF50;
     border: none;
     border-radius: 2px;
     color: whitesmoke;
@@ -765,12 +789,6 @@ input[type=text].input-large {
     font-size: 13px;
 }
 
-.button-submit-large-blue:hover {
-    transition-duration: 0.4s;
-    background-color: #0468c0;
-}
-
-
 .button-submit-medium-blue {
     background-color: #0275d8;
     border: none;
@@ -783,11 +801,6 @@ input[type=text].input-large {
     text-decoration: none;
     display: inline-block;
     font-size: 13px;
-}
-
-.button-submit-medium-blue:hover {
-    transition-duration: 0.4s;
-    background-color: #0468c0;
 }
 
 .button-submit-xsmall-blue {
@@ -804,7 +817,22 @@ input[type=text].input-large {
     font-size: 13px;
 }
 
-.button-submit-xsmall-blue:hover {
+/* Boutton carré */
+.button-submit-xxsmall-blue {
+    background-color: #0275d8;
+    border: none;
+    border-radius: 2px;
+    color: whitesmoke;
+    padding: 2px;
+    margin: 2px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+}
+
+.button-submit-large-blue:hover, .button-submit-medium-blue:hover, .button-submit-xsmall-blue:hover, .button-submit-xxsmall-blue:hover {
     transition-duration: 0.4s;
     background-color: #0468c0;
 }
@@ -815,15 +843,29 @@ input[type=text].input-large {
 
 /* Menu gestion des profils */
 /* input qui ont le même fond que la couleur de fond de leur conteneur permettant que le cadre de l'input soit 'invisible' */
-input[type=text].invisibleInput, input[type=text].invisibleInput2 {
-    width: 80px;
+input[type=text].invisibleInput, input[type=text].invisibleInput2, input[type=text].invisibleInput-green, input[type=text].invisibleInput-blue {
     border: none;
-    background-color: #2b2b2b;
     font-weight: bold;
 }
 
+input[type=text].invisibleInput {
+    background-color: #252525;
+}
+
 input[type=text].invisibleInput2 { /* 2eme type de input invisible, couleur différent */
-    background-color: #333333;
+    background-color: #2b2b2b;
+}
+
+input[type=text].invisibleInput-green {
+    background-color: #4CAF50;
+}
+
+input[type=text].invisibleInput-green:hover {
+    background-color: #3e8e41;
+}
+
+input[type=text].invisibleInput-blue {
+    background-color: #0468c0;
 }
 
 textarea {
@@ -831,10 +873,7 @@ textarea {
     font-size: 13px;
     color: whitesmoke;
     background-color:#3b3b3b;
-}
-
-form.profileForm td {
-    font-size: 13px;
+    border-radius: 3px;
 }
 
 .div-inline {
@@ -843,7 +882,7 @@ form.profileForm td {
 
 .div-inline-right {
     display: inline-block;
-    margin-right: 0;
+    margin-right: 0px;
     margin-left: auto;
 }
 
@@ -967,7 +1006,7 @@ img.cronStatus {
     opacity: 0.33;
 }
 
-#newRepoCloseButton, #GroupsListSlideDownButton, #ReposSourcesSlideDownButton { /* Boutons 'croix' permettant de fermer la div coulissante */
+#newRepoCloseButton, #GroupsListCloseButton, #ReposSourcesCloseButton { /* Boutons 'croix' permettant de fermer la div coulissante */
     float: right;
 }
 
@@ -978,29 +1017,11 @@ img.cronStatus {
     padding-bottom: 2px;
 }
 
-/* Classes génériques */
-.is-inline {
-    display: inline;
-}
-
-.is-block {
-    display: block;
-}
-
-.is-inline-block {
-    display: inline-block;
-}
-
-.float-right {
-    float: right;
-}
-
-
 /* Boutons Top et Down pour atteindre le haut ou le bas de page */
 #scrollButtons {
     position: fixed;
-    top: 220;
-    right: 10;
+    top: 220px;
+    right: 10px;
 }
 
 .button-top {
@@ -1025,3 +1046,40 @@ img.cronStatus {
     opacity: 1;
 }
 
+.profileDivContainer, .groupDivContainer {
+    display: flex;
+    height: 100%;
+    flex-wrap: wrap;
+}
+
+.profileDiv {
+    flex: 0 0 48%;
+    flex-grow : 0;
+    margin: 4px;
+    background-color: #4CAF50;
+    border-radius: 2px;
+}
+
+.groupDiv {
+    flex: 0 0 30%;
+    flex-grow : 0;
+    margin: 4px;
+    background-color: #0468c0;
+    border-radius: 2px;
+}
+
+.reposSourcesDiv {
+    width: 100%;
+    margin: 4px;
+    padding: 4px;
+    background-color: #0468c0;
+    border-radius: 2px;
+}
+
+.profileDivConf, .groupDivConf {
+    margin: 0px;
+    padding: 4px;
+    background-color: #252525;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px
+}
