Publication Beta - premier commit

--- a/www/styles/css-common.css
+++ b/www/styles/css-common.css
@@ -197,7 +197,7 @@ hr {
     font-size: 9px;
     font-weight: bold;
     color: whitesmoke;
-    background-color:#d9534f;
+    background-color:#4CAF50;
     border-radius: 1px;
 }
 
